adding more cases

--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,4945],[],[[4,0,0,[],[0,176,4768,5],[]],[6,0,0,[7],[0,4944,1,8],[]]],[],[2,0,2,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,48444],[],[[4,0,0,[],[1,176,18886],[]],[5,0,0,[],[1,19063,10706],[]],[6,0,0,[],[1,29770,9004],[]],[7,0,0,[],[1,38775,9668],[]]],[],[4,4,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login","*/Users/isfahani/Documents/robot/login.robot","*login.robot","*Positive Test","*Execution terminated by signal","*Negative Test","*robot:exit","*Test execution stopped due to a fatal error."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login","*/Users/isfahani/Documents/robot/login.robot","*login.robot","*Valid Account Test","*Invalid Account Test","*Empty Username Test","*Empty Password Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:05","fail":2,"label":"All Tests","pass":0,"skip":0}],[{"combined":"NOT robot:exit","elapsed":"00:00:05","fail":1,"info":"combined","label":"NOT robot:exit","pass":0,"skip":0}],[{"elapsed":"00:00:05","fail":2,"id":"s1","label":"Login","name":"Login","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:48","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:48","fail":0,"id":"s1","label":"Login","name":"Login","pass":4,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1680496907097;
+window.output["baseMillis"] = 1680524999585;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 4949;
+window.output["generated"] = 48453;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
